/***********************************************************************
 X3 ChangeLog

2006-06-07  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Backing out the bantype patch because it sucks _bad_.
	fix it and re-apply if you want it..

	* src/chanserv.h: Backing out the bantype patch.

	* src/chanserv.help: Backing out the bantype patch.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fixed a bug.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added basic HISTORY command. At the moment
	if the recipient deletes the memo it will not be listed in the
	HISTORY list.

	* src/mod-memoserv.help: HISTORY entry.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added new flags, see below.

	* src/mod-memoserv.help: Opps forgot the read reciept stuff. Also
	added flags for always ignoring read reciepts and always sending
	read reciepts.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added CANCEL command for cancelling memos
	that you have sent, aslong as they have not been read yet.

	* src/mod-memoserv.help: CANCEL entry plus tweaked some read
	recipient to read reciept stuff.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Redid the db stuff, it now writes users
	settings and memos to the memoserv database.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Small bug fix.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added read recipient support via SEND using
	-r as a flag. Messages with requested read recipients have a (r)
	shown beside the sender nick in LIST. People can ignore a read
	recipient using -i when reading the message via READ. Its all
	in the help file.

	* src/mod-memoserv.help: Added read recipient relevent bits.

	* src/opserv.help: Added halfopping functions.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* src/x3.conf.example: Forgot a ;.
