@@ -1,7 +1,15 @@
 /***********************************************************************
  X3 ChangeLog
 
-2006-06-07  Alex Schumann  <rubin@afternet.org>
+2006-06-23  Alex Schumann  <rubin@afternet.org>
+
+	* src/modcmd.help, src/opserv.help, src/helpfile.c, src/helpfile.h,
+	src/modcmd.c, src/nickserv.c: Improvements to
+	table output and help display. 
+
+	* src/mod-memoserv.c: fix segfault
+
+2006-06-23  Alex Schumann  <rubin@afternet.org>
 
 	* src/chanserv.c: Backing out the bantype patch because it sucks _bad_.
 	fix it and re-apply if you want it..
